More difference in the difference pictures

--- a/chap-results.tex
+++ b/chap-results.tex
@@ -372,7 +372,7 @@ Interleaved sampling substantially reduces the number of lights that are process
         \label{fig:results:interleaved_difference_shaded}%
     \end{subfigure}%
 
-      \caption{Interleaved sampling results. Top row shows indirect light only. From left to right: (a) Result of the final gathering phase without the bilateral blur, (b) with the horizontal phase of the blur applied, (c) with both phases applied, (d) result of the final gathering phase without using interleaved sampling, (e) difference between (c) and (d). Bottom row: (f) final result after blending when using interleaved sampling, (g) whithout interleaved sampling, (h) difference between (f) and (g). Difference values are multiplied by four.}
+      \caption{Interleaved sampling results. Top row shows indirect light only. From left to right: (a) Result of the final gathering phase without the bilateral blur, (b) with the horizontal phase of the blur applied, (c) with both phases applied, (d) result of the final gathering phase without using interleaved sampling, (e) difference between (c) and (d). Bottom row: (f) final result after blending when using interleaved sampling, (g) whithout interleaved sampling, (h) difference between (f) and (g). Difference values are multiplied by eight.}
       \label{fig:results:interleaved_quality}
 \end{figure}
 
